# PROJECT

./: CMakeLists.txt  README.md
include/: GameOfLifeCore.hpp  GameOfLifeRenderer.hpp
src/: GameOfLifeCore.cpp  GameOfLifeRenderer.cpp  main.cpp
tests/: GameOfLifeCoreTest.cpp
